--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -13,3 +13,13 @@ services:
       FLASK_ENV: development
       PYTHONPATH: .
       FLASK_APP: web/endpoints.py 
+  postgres:
+    image: postgres:13.2
+    ports:
+      - "5432:5432"
+    environment:
+      - POSTGRES_PASSWORD=admin
+      - POSTGRES_USER=admin
+      - POSTGRES_DB=postgres
+    volumes:
+      - ./schema_storages/postgres_init.sql:/docker-entrypoint-initdb.d/init.sql
